// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with data with remainder 1`] = `
<div
  className="root"
>
  <div
    componentName="Image"
    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg"
    width={48}
  />
  <div
    componentName="Image"
    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg"
    width={48}
  />
  <div
    componentName="Image"
    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg"
    width={48}
  />
  <div
    componentName="Image"
    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg"
    width={48}
  />
  <span
    className="remainderCount"
  >
    +1
  </span>
</div>
`;

exports[`renders correctly with data without remainder 1`] = `
<div
  className="root"
>
  <div
    componentName="Image"
    src="https://master-7rqtwti-c5v7sxvquxwl4.eu-4.magentosite.cloud/media/catalog/product/cache/d3ba9f7bcd3b0724e976dc5144b29c7d/v/s/vsw01-rn_main_2.jpg"
    width={48}
  />
</div>
`;

exports[`renders empty container without image data 1`] = `
<div
  className="root"
/>
`;
